dark mode toggle and correct switchfield

--- a/src/App.css
+++ b/src/App.css
@@ -13,21 +13,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +21,40 @@
     transform: rotate(360deg);
   }
 }
+
+
+.App-header {
+  background-color: white;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+.dark-mode {
+  backdrop-filter: invert(80%);
+  color: white;
+  --amplify-components-text-color-primary: white;
+  --amplify-components-heading-color: white;
+  --amplify-components-button-color: white;
+  --amplify-components-button-text-color: white;
+}
+
+.underline {
+  border-bottom: 1px solid black;
+}
+.underline.dark-mode {
+  border-bottom: 1px solid white;
+}
+
+.amplify-text {
+  color: var(--amplify-components-text-color-primary);
+}
+
